* Added support for LevelPacks (7z archives containing level files). * Fixed: (finally) life loss when changing maps * Fixed: map not resetting after "game over"

--- a/projects/visualC/Tank.vcxproj
+++ b/projects/visualC/Tank.vcxproj
@@ -11,10 +11,47 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\src\7z\7zAlloc.c" />
+    <ClCompile Include="..\..\src\7z\7zBuf.c" />
+    <ClCompile Include="..\..\src\7z\7zBuf2.c" />
+    <ClCompile Include="..\..\src\7z\7zCrc.c" />
+    <ClCompile Include="..\..\src\7z\7zCrcOpt.c" />
+    <ClCompile Include="..\..\src\7z\7zDec.c" />
+    <ClCompile Include="..\..\src\7z\7zFile.c" />
+    <ClCompile Include="..\..\src\7z\7zIn.c" />
+    <ClCompile Include="..\..\src\7z\7zStream.c" />
+    <ClCompile Include="..\..\src\7z\Alloc.c" />
+    <ClCompile Include="..\..\src\7z\Bcj2.c" />
+    <ClCompile Include="..\..\src\7z\Bra.c" />
+    <ClCompile Include="..\..\src\7z\Bra86.c" />
+    <ClCompile Include="..\..\src\7z\BraIA64.c" />
+    <ClCompile Include="..\..\src\7z\CpuArch.c" />
+    <ClCompile Include="..\..\src\7z\Delta.c" />
+    <ClCompile Include="..\..\src\7z\LzFind.c" />
+    <ClCompile Include="..\..\src\7z\LzFindMt.c" />
+    <ClCompile Include="..\..\src\7z\Lzma2Dec.c" />
+    <ClCompile Include="..\..\src\7z\Lzma2Enc.c" />
+    <ClCompile Include="..\..\src\7z\Lzma86Dec.c" />
+    <ClCompile Include="..\..\src\7z\Lzma86Enc.c" />
+    <ClCompile Include="..\..\src\7z\LzmaDec.c" />
+    <ClCompile Include="..\..\src\7z\LzmaEnc.c" />
+    <ClCompile Include="..\..\src\7z\LzmaLib.c" />
+    <ClCompile Include="..\..\src\7z\MtCoder.c" />
+    <ClCompile Include="..\..\src\7z\Ppmd7.c" />
+    <ClCompile Include="..\..\src\7z\Ppmd7Dec.c" />
+    <ClCompile Include="..\..\src\7z\Ppmd7Enc.c" />
+    <ClCompile Include="..\..\src\7z\Sha256.c" />
+    <ClCompile Include="..\..\src\7z\Threads.c" />
+    <ClCompile Include="..\..\src\7z\Xz.c" />
+    <ClCompile Include="..\..\src\7z\XzCrc64.c" />
+    <ClCompile Include="..\..\src\7z\XzDec.c" />
+    <ClCompile Include="..\..\src\7z\XzEnc.c" />
+    <ClCompile Include="..\..\src\7z\XzIn.c" />
     <ClCompile Include="..\..\src\Animation.cpp" />
     <ClCompile Include="..\..\src\Bonus.cpp" />
     <ClCompile Include="..\..\src\Enemy.cpp" />
     <ClCompile Include="..\..\src\Game.cpp" />
+    <ClCompile Include="..\..\src\LevelPack.cpp" />
     <ClCompile Include="..\..\src\main.cpp" />
     <ClCompile Include="..\..\src\Map.cpp" />
     <ClCompile Include="..\..\src\Menu.cpp" />
@@ -27,11 +64,42 @@
     <ClCompile Include="..\..\src\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\src\7z\7z.h" />
+    <ClInclude Include="..\..\src\7z\7zAlloc.h" />
+    <ClInclude Include="..\..\src\7z\7zBuf.h" />
+    <ClInclude Include="..\..\src\7z\7zCrc.h" />
+    <ClInclude Include="..\..\src\7z\7zFile.h" />
+    <ClInclude Include="..\..\src\7z\7zVersion.h" />
+    <ClInclude Include="..\..\src\7z\Alloc.h" />
+    <ClInclude Include="..\..\src\7z\Bcj2.h" />
+    <ClInclude Include="..\..\src\7z\Bra.h" />
+    <ClInclude Include="..\..\src\7z\CpuArch.h" />
+    <ClInclude Include="..\..\src\7z\Delta.h" />
+    <ClInclude Include="..\..\src\7z\LzFind.h" />
+    <ClInclude Include="..\..\src\7z\LzFindMt.h" />
+    <ClInclude Include="..\..\src\7z\LzHash.h" />
+    <ClInclude Include="..\..\src\7z\Lzma2Dec.h" />
+    <ClInclude Include="..\..\src\7z\Lzma2Enc.h" />
+    <ClInclude Include="..\..\src\7z\Lzma86.h" />
+    <ClInclude Include="..\..\src\7z\LzmaDec.h" />
+    <ClInclude Include="..\..\src\7z\LzmaEnc.h" />
+    <ClInclude Include="..\..\src\7z\LzmaLib.h" />
+    <ClInclude Include="..\..\src\7z\MtCoder.h" />
+    <ClInclude Include="..\..\src\7z\Ppmd.h" />
+    <ClInclude Include="..\..\src\7z\Ppmd7.h" />
+    <ClInclude Include="..\..\src\7z\RotateDefs.h" />
+    <ClInclude Include="..\..\src\7z\Sha256.h" />
+    <ClInclude Include="..\..\src\7z\Threads.h" />
+    <ClInclude Include="..\..\src\7z\Types.h" />
+    <ClInclude Include="..\..\src\7z\Xz.h" />
+    <ClInclude Include="..\..\src\7z\XzCrc64.h" />
+    <ClInclude Include="..\..\src\7z\XzEnc.h" />
     <ClInclude Include="..\..\src\Animation.h" />
     <ClInclude Include="..\..\src\Bonus.h" />
     <ClInclude Include="..\..\src\Enemy.h" />
     <ClInclude Include="..\..\src\Game.h" />
     <ClInclude Include="..\..\src\Keyboard.h" />
+    <ClInclude Include="..\..\src\LevelPack.h" />
     <ClInclude Include="..\..\src\List.h" />
     <ClInclude Include="..\..\src\Map.h" />
     <ClInclude Include="..\..\src\Menu.h" />
