--- a/projects/visualC/Tank.vcxproj.filters
+++ b/projects/visualC/Tank.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClCompile Include="..\..\src\SoundManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\Config.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\Animation.h">
@@ -339,6 +342,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\SoundManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Config.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
