* Changed: comments in Polish are now translated to English * Fixed: added config files to codelite project * Fixed: added needed libs in order to compile with GCC * Fixed: dead enemies blocking living ones * Fixed: player blocking when partially on BT_SEA with boat bonus * Fixed: player spawning animation not launching * Minor code fixes

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@ ipch/
 # CodeLite generated files #
 ############################
 *.tags
+*.mk
+*.workspace.session
+tank.txt
 
 # Build generated directories #
 ###############################
