--- a/projects/codelite/tank.project
+++ b/projects/codelite/tank.project
@@ -19,7 +19,6 @@
     <File Name="../../src/Keyboard.h"/>
     <File Name="../../src/LevelPack.cpp"/>
     <File Name="../../src/LevelPack.h"/>
-    <File Name="../../src/List.h"/>
     <File Name="../../src/main.cpp"/>
     <File Name="../../src/Map.cpp"/>
     <File Name="../../src/Map.h"/>
@@ -65,51 +64,22 @@
     <File Name="../../src/7z/7zIn.c"/>
     <File Name="../../src/7z/7zStream.c"/>
     <File Name="../../src/7z/7zVersion.h"/>
-    <File Name="../../src/7z/Alloc.c"/>
-    <File Name="../../src/7z/Alloc.h"/>
     <File Name="../../src/7z/Bcj2.c"/>
     <File Name="../../src/7z/Bcj2.h"/>
     <File Name="../../src/7z/Bra.c"/>
     <File Name="../../src/7z/Bra.h"/>
     <File Name="../../src/7z/Bra86.c"/>
-    <File Name="../../src/7z/BraIA64.c"/>
     <File Name="../../src/7z/CpuArch.c"/>
     <File Name="../../src/7z/CpuArch.h"/>
-    <File Name="../../src/7z/Delta.c"/>
-    <File Name="../../src/7z/Delta.h"/>
-    <File Name="../../src/7z/LzFind.c"/>
-    <File Name="../../src/7z/LzFind.h"/>
-    <File Name="../../src/7z/LzHash.h"/>
     <File Name="../../src/7z/Lzma2Dec.c"/>
     <File Name="../../src/7z/Lzma2Dec.h"/>
-    <File Name="../../src/7z/Lzma86.h"/>
-    <File Name="../../src/7z/Lzma86Dec.c"/>
-    <File Name="../../src/7z/Lzma86Enc.c"/>
     <File Name="../../src/7z/LzmaDec.c"/>
     <File Name="../../src/7z/LzmaDec.h"/>
-    <File Name="../../src/7z/LzmaEnc.c"/>
-    <File Name="../../src/7z/LzmaEnc.h"/>
-    <File Name="../../src/7z/LzmaLib.c"/>
-    <File Name="../../src/7z/LzmaLib.h"/>
     <File Name="../../src/7z/Ppmd.h"/>
     <File Name="../../src/7z/Ppmd7.c"/>
     <File Name="../../src/7z/Ppmd7.h"/>
     <File Name="../../src/7z/Ppmd7Dec.c"/>
-    <File Name="../../src/7z/Ppmd7Enc.c"/>
-    <File Name="../../src/7z/RotateDefs.h"/>
-    <File Name="../../src/7z/Sha256.c"/>
-    <File Name="../../src/7z/Sha256.h"/>
     <File Name="../../src/7z/Types.h"/>
-    <File Name="../../src/7z/Xz.c"/>
-    <File Name="../../src/7z/Xz.h"/>
-    <File Name="../../src/7z/XzCrc64.c"/>
-    <File Name="../../src/7z/XzCrc64.h"/>
-    <File Name="../../src/7z/XzDec.c"/>
-    <File Name="../../src/7z/XzEnc.c"/>
-    <File Name="../../src/7z/XzEnc.h"/>
-    <File Name="../../src/7z/XzIn.c"/>
-    <File Name="../../src/7z/Lzma2Enc.c"/>
-    <File Name="../../src/7z/Lzma2Enc.h"/>
   </VirtualDirectory>
   <Settings Type="Executable">
     <GlobalSettings>
@@ -122,7 +92,7 @@
       <ResourceCompiler Options=""/>
     </GlobalSettings>
     <Configuration Name="Debug" CompilerType="gnu g++" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-g" C_Options="-g -D_7ZIP_ST" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
+      <Compiler Options="-g" C_Options="-g" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
         <IncludePath Value="."/>
       </Compiler>
       <Linker Options="" Required="yes">
@@ -165,7 +135,7 @@
       </Completion>
     </Configuration>
     <Configuration Name="Release" CompilerType="gnu g++" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="" C_Options="-D_7ZIP_ST" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
+      <Compiler Options="" C_Options="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
         <IncludePath Value="."/>
       </Compiler>
       <Linker Options="-O2" Required="yes">
