--- a/projects/visualC/Tank.vcxproj.filters
+++ b/projects/visualC/Tank.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClCompile Include="..\..\src\7ZipArchive.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\Directory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\Animation.h">
@@ -243,6 +246,9 @@
       <Filter>7z</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\7ZipArchive.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Directory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
