--- a/projects/visualC/Tank.vcxproj
+++ b/projects/visualC/Tank.vcxproj
@@ -32,6 +32,9 @@
     <ClCompile Include="..\..\src\Animation.cpp" />
     <ClCompile Include="..\..\src\Bonus.cpp" />
     <ClCompile Include="..\..\src\Config.cpp" />
+    <ClCompile Include="..\..\src\D3D8RenderList.cpp" />
+    <ClCompile Include="..\..\src\D3D8Texture.cpp" />
+    <ClCompile Include="..\..\src\D3D8VideoDriver.cpp" />
     <ClCompile Include="..\..\src\Directory.cpp" />
     <ClCompile Include="..\..\src\Enemy.cpp" />
     <ClCompile Include="..\..\src\Game.cpp" />
@@ -66,6 +69,9 @@
     <ClInclude Include="..\..\src\Animation.h" />
     <ClInclude Include="..\..\src\Bonus.h" />
     <ClInclude Include="..\..\src\Config.h" />
+    <ClInclude Include="..\..\src\D3D8RenderList.h" />
+    <ClInclude Include="..\..\src\D3D8Texture.h" />
+    <ClInclude Include="..\..\src\D3D8VideoDriver.h" />
     <ClInclude Include="..\..\src\Directory.h" />
     <ClInclude Include="..\..\src\Enemy.h" />
     <ClInclude Include="..\..\src\Game.h" />
@@ -103,7 +109,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -117,15 +123,15 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <LibraryPath>$(SolutionDir)libs\lib;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\Lib;$(LibraryPath)</LibraryPath>
-    <IncludePath>$(SolutionDir)libs\include;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)libs\lib;$(LibraryPath);C:\DXSDK\lib</LibraryPath>
+    <IncludePath>$(SolutionDir)libs\include;$(IncludePath);C:\DXSDK\include</IncludePath>
     <OutDir>$(SolutionDir)..\..\bin\visualC\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)..\..\obj\visualC\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)libs\include;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)libs\lib;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\Lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)libs\include;$(IncludePath);C:\DXSDK\include</IncludePath>
+    <LibraryPath>$(SolutionDir)libs\lib;$(LibraryPath);C:\DXSDK\lib</LibraryPath>
     <OutDir>$(SolutionDir)..\..\bin\visualC\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)..\..\obj\visualC\$(Configuration)\</IntDir>
   </PropertyGroup>
