--- a/projects/visualC/Tank.vcxproj.filters
+++ b/projects/visualC/Tank.vcxproj.filters
@@ -273,4 +273,9 @@
       <Filter>Renderer\Direct3D8Renderer</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="..\..\src\resources.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
 </Project>
