* Moving to CMake build system (initial scripts, working on Linux)

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,10 @@ tank.txt
 ###############################
 /bin/
 /obj/
+
+# KDE backup files
+*~
+# Dolphin folder view settings
+.directory
+
+/include/buildconfig.h
