--- a/src/resources.rc
+++ b/src/resources.rc
@@ -1,1 +1,20 @@
-10000       ICON DISCARDABLE "../resources/icon.ico"
+/*
+    Copyright 2011, 2012 Kacper Kasper <kacperkasper@gmail.com>
+
+    This file is part of Tank.
+
+    Tank is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    Tank is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with Tank.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
+10000       ICON DISCARDABLE "../data/icon.ico"
