* Constants * Forward declarations * Code cleanup (unnecessary pragmas, spaces, etc.) * New CMake options (disabling WITH_OPENGL will break the build until NullVideoDriver is added)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,13 @@ project(Tank)
 
 cmake_minimum_required(VERSION 2.8)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake_modules")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 option(WITH_OPENGL "Enable OpenGL renderer" ON)
+if(WITH_OPENGL)
+  option(WITH_GLEW "Enable GLEW library" ON)
+endif(WITH_OPENGL)
 if(WIN32 AND NOT CMAKE_CL_64)
   option(WITH_D3D8 "Enable Direct3D 8 renderer" ON)
 endif(WIN32 AND NOT CMAKE_CL_64)
@@ -14,7 +17,12 @@ endif(WIN32 AND NOT CMAKE_CL_64)
 find_package(SDL REQUIRED)
 find_package(SDL_image REQUIRED)
 find_package(SDL_mixer REQUIRED)
-find_package(GLEW REQUIRED)
+if(WITH_OPENGL)
+  find_package(OpenGL REQUIRED)
+  if(WITH_GLEW)
+    find_package(GLEW REQUIRED)
+  endif(WITH_GLEW)
+endif(WITH_OPENGL)
 if(WITH_D3D8)
   find_package(D3D8 REQUIRED)
 endif(WITH_D3D8)
@@ -22,14 +30,28 @@ endif(WITH_D3D8)
 # setup paths and link libraries
 list(APPEND INC_PATH
   ${SDL_INCLUDE_DIR}
-  ${GLEW_INCLUDE_PATH}
 )
 list(APPEND LIBS
   ${SDL_LIBRARY}
   ${SDLIMAGE_LIBRARY}
   ${SDLMIXER_LIBRARY}
-  ${GLEW_LIBRARY}
 )
+if(WITH_OPENGL)
+  list(APPEND INC_PATH
+    ${OPENGL_INCLUDE_DIR}
+  )
+  list(APPEND LIBS
+    ${OPENGL_LIBRARIES}
+  )
+  if(WITH_GLEW)
+    list(APPEND INC_PATH
+      ${GLEW_INCLUDE_PATH}
+    )
+    list(APPEND LIBS
+      ${GLEW_LIBRARY}
+    )
+  endif(WITH_GLEW)
+endif(WITH_OPENGL)
 if(WITH_D3D8)
   list(APPEND INC_PATH
     ${D3D8_INCLUDE_PATH}
@@ -44,8 +66,14 @@ endif(WITH_D3D8)
 
 include_directories(include ${INC_PATH})
 add_subdirectory(src)
-  
+
 configure_file(${CMAKE_SOURCE_DIR}/include/buildconfig.h.cmake ${CMAKE_SOURCE_DIR}/include/buildconfig.h)
+
+# disable deprecation warning
+# FIXME
+if(MSVC)
+  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+endif(MSVC)
 
 if(WIN32)
   add_executable(tank WIN32 ${TANK_SOURCES} src/resources.rc)
