--- a/src/resources.rc
+++ b/src/resources.rc
@@ -1,5 +1,5 @@
 /*
-    Copyright 2011, 2012 Kacper Kasper <kacperkasper@gmail.com>
+    Copyright 2011-2013 Kacper Kasper <kacperkasper@gmail.com>
 
     This file is part of Tank.
 
@@ -17,4 +17,37 @@
     along with Tank.  If not, see <http://www.gnu.org/licenses/>.
 */
 
-10000       ICON DISCARDABLE "../data/icon.ico"
+10000                   ICON                    "../data/icon.ico"
+
+1 VERSIONINFO
+ FILEVERSION 0,8,2,0
+ PRODUCTVERSION 0,8,2,0
+ FILEFLAGSMASK 0x3fL
+#ifdef _DEBUG
+ FILEFLAGS 0x1L
+#else
+ FILEFLAGS 0x0L
+#endif
+ FILEOS 0x40004L
+ FILETYPE 0x1L
+ FILESUBTYPE 0x0L
+BEGIN
+    BLOCK "StringFileInfo"
+    BEGIN
+        BLOCK "040904E4"
+        BEGIN
+            VALUE "CompanyName", "Kacper Kasper"
+            VALUE "FileDescription", "Battle City PC clone"
+            VALUE "FileVersion", "0.8.2.0"
+            VALUE "InternalName", "tank.exe"
+            VALUE "LegalCopyright", "Copyright (C) 2011-2013 Kacper Kasper"
+            VALUE "OriginalFilename", "tank.exe"
+            VALUE "ProductName", "Tank"
+            VALUE "ProductVersion", "0.8.2.0"
+        END
+    END
+    BLOCK "VarFileInfo"
+    BEGIN
+        VALUE "Translation", 0x409, 1252
+    END
+END
